<resources>
    <string name="app_name">Kotlin Start</string>
    <string name="click_me">Click me</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="apply">Apply</string>
    <string name="write_your_name">Write Your name:</string>
    <string name="write_your_age">Write Your age:</string>
    <string name="enter_your_data">ЖМИ</string>
    <string name="alien">alien</string>
    <string name="greeting">Приветсвую тебя человечешка!</string>
    <string name="introduce_yourself">Жми на кнопку человечешка!</string>
    <string name="title">Укажи свои данные, земляненен и нажми кнопку!</string>
    <string name="add_new_city">add new city</string>
    <string name="icon_sun">icon_sun</string>
    <string name="hint_city">Город</string>
    <string name="add_your_place">Поиск города</string>
    <string name="write_city">Введите название города</string>
    <string name="exit">Для выхода нажмите еще раз</string>
    <string name="city_name">Москва</string>
    <string name="region_name">Москва</string>
    <string name="degrees_centigrade">27°</string>
    <string name="degrees">%s°</string>
    <string name="fills_like_text">Ощущается как 27°</string>
    <string name="fills_like">Ощущается как %s°</string>
    <string name="weather_condition">Солнечно</string>
    <string name="detail_information_text">Дитальная информация о погоде на неделю и в течении дня</string>
    <string name="image_weather_condition">Изображение состояние погоды</string>
    <string name="city_is_not_find">Город не найден</string>

    <string name="threads">Threads</string>
    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Расчёт</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчёт в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="degrees_text">%s°</string>
    <string name="tempeture">Температура</string>

    <!--GPS-->
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_button_ok">Да</string>
    <string name="dialog_button_no">Нет</string>
    <string name="massage_error_appstate">"Ошибка получения данных из AppState"</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="botton_search">Поиск</string>
    <string name="dialog_city_search_message">Хотите знать погоду в городе %s?</string>


    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">search</string>
    <string name="city_search">Поиск города</string>
    <string name="empty_list">ПУСТОЙ СПИСОК</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>