<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_weather_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    android:elevation="20sp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/history_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="№ 1"
            />

        <TextView
            android:id="@+id/text_view_city"
            style="@style/MainCityItemStyle"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            app:layout_constraintStart_toEndOf="@+id/history_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/city_name"
            />


        <TextView
            android:id="@+id/temperature"
            style="@style/CityItem"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_temp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_city"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/degrees_centigrade"
            />

        <TextView
            android:id="@+id/condition"
            style="@style/CityItem"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_temp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/temperature"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/weather_condition"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
